- add http-redirect

--- a/README
+++ b/README
@@ -64,23 +64,35 @@ routine (as http above), callers can wrap it easily and construct higher-lever p
 of it, again, resulting in a protocol that will also be a single subroutine. For example, a
 HTTP handler that can understand redirection:
 
+	use strict;
+	use HTTP::Request;
+	use HTTP::Response;
+	use IO::Lambda qw(:all);
+	use IO::Socket::INET;
+
 	# create chain of event on an existsing lambda object, that when
 	# finished, will contain the result
+
 	sub http_request
 	{
 		my ($q, $req) = @_;
-		my $socket = socket_to_http_request( $req);
+		my $socket = IO::Socket::INET-> new(
+			PeerAddr => $req-> uri-> host,
+			PeerPort => $req-> uri-> port,
+			Blocking => 0,
+		);
+		return $q-> fail("socket error:$@") unless $socket;
+
 		self_context( $q, $socket);
 		write {
-			print $socket $req or return "error:$!";
+			print $socket $req-> as_string or return "error:$!";
 			my $buf = '';
 			read {
 				my $n = sysread( $socket, $buf, 1024, length($buf));
 				return "error:$!" unless defined $n;
-				return $buf unless $n;
+				return HTTP::Response-> parse($buf) unless $n;
 				again;
 			};
-			
 		};
 	}
 
@@ -95,9 +107,10 @@ HTTP handler that can understand redirection:
 		self_context( $q, $subq);
 		pipeline {
 			my $result = shift;
-			return $result unless ref($result) eq 'HTTP::Response';
-			return $result if $result-> code =~ s/^30/;
+			return $result unless ref($result);
+			return $result if $result-> code !~ /^30/;
 			$req-> uri( $result-> header('Location'));
+			warn "redirected to ", $req-> uri, "\n";
 			push_context;
 			http_request( $subq, $req);
 			pop_context;
@@ -107,6 +120,18 @@ HTTP handler that can understand redirection:
 
 	# main call
 	my $q = IO::Lambda-> new;
-	http_request( $q, HTTP::Request-> new(...));
-	$q-> tail( sub { print shift } );
+	my $r = HTTP::Request-> new( GET => 'http://google.com/');
+	$r-> protocol('HTTP/1.1');
+	$r-> headers-> header( Host => $r-> uri-> host);
+	$r-> headers-> header( Connection => 'close');
+	http_redirect_request( $q, $r);
+	$q-> tail( sub { 
+		my $r = $_[1];
+		unless ( ref($r)) {
+			print "some error:$r\n";
+		} else {
+			print "read ", length($r->as_string), " bytes\n";
+		}
+	});
 	$q-> wait;
+
