--- a/Changes
+++ b/Changes
@@ -45,5 +45,8 @@
 0.18 - 25 May 2008
 	simplify yield()/wait(), facilitate override() with state()
 
+0.21 - 31 Jul 2008
+	smarter getline(), io() is alias to lambda()
+
 0.22 - 5 Aug 2008
 	add intercept()	
