- v0.45 - perl 5.6.2 has issues with SIGCHLD (possibly with all signals) - protect

--- a/Changes
+++ b/Changes
@@ -104,3 +104,6 @@
 
 0.42-4 - 23 Nov 2008
 	cosmetic changes
+
+0.45  - 4 Dec 2008
+	added minor safeguards in tests here and there against bizarre perls and platforms
