- add higher-order functions: seq, par, mapcar, filter, fold,   exported with (:func). - v0.47

--- a/Changes
+++ b/Changes
@@ -110,3 +110,6 @@
 
 0.46  - 17 Dec 2008
 	documentation proof-reading
+
+0.47  - 18 Dec 2008
+	add higher-order functions: seq, par, mapcar, filter, fold
