--- a/Changes
+++ b/Changes
@@ -113,3 +113,7 @@
 
 1.00  - 18 Dec 2008
 	add higher-order functions: seq, par, mapcar, filter, fold, curry
+
+1.01  - 8 Jan 2008
+	rename read to readable, write to writable, readwrite to rwx, sleep to timeout.
+
