--- a/Changes
+++ b/Changes
@@ -117,5 +117,6 @@
 1.01  - 8 Jan 2008
 	rename read to readable, write to writable, readwrite to rwx, sleep to timeout.
 
-1.02  - 9 Jan 2008
+1.02  - 11 Jan 2008
 	fix "invalid handle" exceptions caused by bugs in SNMP code
+	implement DBI::prepare and DBI call grouping
